Corrected a z-index error, updated buttons to new classes

--- a/merchandise/static/merchandise/css/merch.css
+++ b/merchandise/static/merchandise/css/merch.css
@@ -96,6 +96,7 @@ select {
     right: 1rem;
     top: .5rem;
     text-shadow: 1px 1px #333;
+    z-index: 1;
 }
 
 .edit-merch {
